@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-10-10T01:17:31Z",
-  "count_outdated" : 36,
-  "uniques_outdated" : 6,
-  "count" : 37,
-  "uniques" : 7,
+  "timestamp" : "2025-11-10T01:26:03Z",
+  "count_outdated" : 37,
+  "uniques_outdated" : 7,
+  "count" : 38,
+  "uniques" : 8,
   "views" : [
     {
-      "timestamp": "2025-10-09T00:00:00Z",
+      "timestamp": "2025-11-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
